# github-star-index

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: manual_categories.json
docs/: AUTOMATION.md  POSITIONING.md  RELEASE.md  VERIFICATION.md  WORKLOG.md
examples/sample-output/: sample-user-stars.last-refresh.json  sample-user-stars.last-refresh.md  sample-user-stars.manifest.json  sample-user-stars.raw.json  sample-user-stars.summary.md  sample-user-stars.xml
examples/sample-output/corpus/: bundle.manifest.json  categories.jsonl  chunks.jsonl  repos.jsonl
openspec/changes/agent-ready-oss-corpus/: design.md  proposal.md  tasks.md
openspec/changes/agent-ready-oss-corpus/specs/artifact-bundles/: spec.md
openspec/changes/agent-ready-oss-corpus/specs/distribution/: spec.md
openspec/changes/agent-ready-oss-corpus/specs/index-generation/: spec.md
openspec/changes/agent-ready-oss-corpus/specs/refresh-reporting/: spec.md
openspec/specs/index-generation/: spec.md
openspec/specs/refresh-reporting/: spec.md
scripts/: build_star_index.py  generate_examples.py  refresh_star_index.py  run-checks.sh
src/star_index/: __init__.py  artifacts.py  build.py  bundle.py  cli.py  corpus.py  diffing.py  github_api.py  paths.py  refresh.py  taxonomy.py  validate.py
tasks/: lessons.md  todo.md
tests/: test_bundle_outputs.py  test_normalization_taxonomy.py  test_offline_artifacts.py  test_refresh_diff.py
tests/fixtures/: sample-stars-before.raw.json
