[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-star-index"
version = "0.1.0"
description = "Build deterministic, agent-ready knowledge artifacts from GitHub stars."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alec Brewer" }]
dependencies = []

[project.scripts]
star-index = "star_index.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
