[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-star-index"
version = "0.1.0"
description = "Build deterministic, agent-ready knowledge artifacts from GitHub stars."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alec Brewer" }]
keywords = ["github", "stars", "llm", "agents", "automation", "xml", "jsonl", "cli"]
dependencies = []

[project.urls]
Homepage = "https://github.com/chance600/github-star-index"
Repository = "https://github.com/chance600/github-star-index"
Issues = "https://github.com/chance600/github-star-index/issues"

[project.scripts]
star-index = "star_index.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
